Customize font for header/footer text.
Follow the font family of the paper title (rm for PLAN, sf for others).

--- a/README
+++ b/README
@@ -26,3 +26,5 @@ version 1.14    Warn about undefined citation styles; move definitions
 
 version 1.15    New structured affiliation command.
                 New commands for acknowledgements.
+
+version 1.16    Formatting header/footer.
