--- a/sample-acmtog.tex
+++ b/sample-acmtog.tex
@@ -90,6 +90,7 @@
   \country{USA}
 }
 
+\renewcommand\shortauthors{Zhou, G. et al}
 
 \begin{abstract}
 Multifrequency media access control has been well understood in
