Bug fixes.  Closes #51

--- a/README
+++ b/README
@@ -29,4 +29,4 @@ version 1.15    New structured affiliation command.
 
 version 1.16    Formatting changes for headers and footers.
 
-version 1.17    Formatting changes for margins and lists.
+version 1.17    Formatting changes for margins and lists.  Bug fixes.
