--- a/sample-sigchi-a.tex
+++ b/sample-sigchi-a.tex
@@ -383,7 +383,7 @@ accordingly.
   We thank all the volunteers, publications support, staff, and
   authors who wrote and provided helpful comments on previous versions
   of this document. As well authors 1, 2, and 3 gratefully acknowledge
-  the grant from \gsponsor{001}{NSF}{}
+  the grant from \grantsponsor{001}{NSF}{}
   (\#\grantnum{001}{1234-2222-ABC}). Author 4 for example may want to
   acknowledge a supervisor/manager from their original employer. This
   whole paragraph is just for example. Some of the references cited in
