--- a/samplebody-conf.tex
+++ b/samplebody-conf.tex
@@ -346,8 +346,11 @@ code.
 
   The authors would also like to thank the anonymous referees for
   their valuable comments and helpful suggestions. The work is
-  supported by the \gsponsor{GS501100001809}{National Natural
-  Science Foundation of
-  China}{http://dx.doi.org/10.13039/501100001809} under Grant No.:
-  \grantnum{GS501100001809}{61273304}.
+  supported by the \grantsponsor{GS501100001809}{National Natural
+    Science Foundation of
+    China}{http://dx.doi.org/10.13039/501100001809} under Grant
+  No.:~\grantnum{GS501100001809}{61273304}
+  and~\grantnum[http://www.nnsf.cn/youngscientsts]{GS501100001809}{Young
+    Scientsts' Support Program}.
+
 \end{acks}
