--- a/samplebody-journals.tex
+++ b/samplebody-journals.tex
@@ -364,10 +364,12 @@ MAC layer.
 The authors would like to thank Dr. Maura Turolla of Telecom
 Italia for providing specifications about the application scenario.
 
-The work is supported by the \gsponsor{GS501100001809}{National
+The work is supported by the \grantsponsor{GS501100001809}{National
   Natural Science Foundation of
-  China}{http://dx.doi.org/10.13039/501100001809} under Grant No.:
-\grantnum{GS501100001809}{61273304_a}.
+  China}{http://dx.doi.org/10.13039/501100001809} under Grant
+No.:~\grantnum{GS501100001809}{61273304\_a}
+and~\grantnum[http://www.nnsf.cn/youngscientsts]{GS501100001809}{Young
+  Scientsts' Support Program}.
 
 
 \end{acks}
