Made defaults numerical.  Closes #50

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -2788,28 +2788,31 @@ Computing Machinery]
 % \end{macro}
 %
 % \begin{macro}{\acmVolume}
+% \changes{v1.17}{2016/07/10}{The default is now numerical}
 %   The current volume
 %    \begin{macrocode}
 \def\acmVolume#1{\def\@acmVolume{#1}}
-\acmVolume{VV}
+\acmVolume{1}
 %    \end{macrocode}
 %
 % \end{macro}
 %
 % \begin{macro}{\acmNumber}
+% \changes{v1.17}{2016/07/10}{The default is now numerical}
 %   The current number
 %    \begin{macrocode}
 \def\acmNumber#1{\def\@acmNumber{#1}}
-\acmNumber{NNN}
+\acmNumber{1}
 %    \end{macrocode}
 %
 % \end{macro}
 %
 % \begin{macro}{\acmArticle}
+% \changes{v1.17}{2016/07/10}{The default is now numerical}
 %   The current article
 %    \begin{macrocode}
 \def\acmArticle#1{\def\@acmArticle{#1}}
-\acmArticle{AA}
+\acmArticle{1}
 %    \end{macrocode}
 %
 % \end{macro}
@@ -2825,10 +2828,11 @@ Computing Machinery]
 % \end{macro}
 %
 % \begin{macro}{\acmYear}
+% \changes{v1.17}{2016/07/10}{The default is now numerical}
 %   The current year
 %    \begin{macrocode}
 \def\acmYear#1{\def\@acmYear{#1}}
-\acmYear{YYYY}
+\acmYear{2016}
 %    \end{macrocode}
 %
 % \end{macro}
