--- a/sample-sigchi-a.tex
+++ b/sample-sigchi-a.tex
@@ -435,6 +435,6 @@ black.
 
 
 \bibliography{sigchi-a}
-\bibliographystyle{SIGCHI-Reference-Format}
+\bibliographystyle{ACM-Reference-Format}
 
 \end{document}
