--- a/sample-sigchi.tex
+++ b/sample-sigchi.tex
@@ -162,7 +162,7 @@ ACM SIG Proceedings.
 
 \input{samplebody-conf}
 
-\bibliographystyle{SIGCHI-Reference-Format}
+\bibliographystyle{ACM-Reference-Format}
 \bibliography{sigproc} 
 
 \end{document}
