--- a/sample-sigconf.tex
+++ b/sample-sigconf.tex
@@ -157,7 +157,7 @@ ACM SIG Proceedings\footnote{This is an abstract footnote}.
 
 \input{samplebody-conf}
 
-\bibliographystyle{acm-abbrv}
+\bibliographystyle{ACM-Reference-Format}
 \bibliography{sigproc} 
 
 \end{document}
