--- a/sample-siggraph.tex
+++ b/sample-siggraph.tex
@@ -1,7 +1,7 @@
 \documentclass[siggraph, review=false]{acmart}
 
 \usepackage{booktabs} % For formal tables
-
+\citestyle{acmauthoryear}  % Author-year format
 
 % Copyright
 %\setcopyright{none}
@@ -164,7 +164,7 @@ ACM SIG Proceedings.
 
 \input{samplebody-conf}
 
-\bibliographystyle{acmsiggraph}
+\bibliographystyle{ACM-Reference-Format}
 \bibliography{sigproc} 
 
 \end{document}
