--- a/sample-sigplan.tex
+++ b/sample-sigplan.tex
@@ -166,7 +166,7 @@ ACM SIG Proceedings.
 
 \input{samplebody-conf}
 
-\bibliographystyle{ACM-Reference-Format-Journals}
+\bibliographystyle{ACM-Reference-Format}
 \bibliography{sigproc} 
 
 \end{document}
