--- a/samplebody-journals.tex
+++ b/samplebody-journals.tex
@@ -375,5 +375,5 @@ and~\grantnum[http://www.nnsf.cn/youngscientsts]{GS501100001809}{Young
 \end{acks}
 
 % Bibliography
-\bibliographystyle{ACM-Reference-Format-Journals}
+\bibliographystyle{ACM-Reference-Format}
 \bibliography{sample-bibliography}
