--- a/README
+++ b/README
@@ -30,3 +30,7 @@ version 1.15    New structured affiliation command.
 version 1.16    Formatting changes for headers and footers.
 
 version 1.17    Formatting changes for margins and lists.  Bug fixes.
+
+version 1.18    Natbib is now the default for all versions.  A unified bib
+		file is used for all styles.
+
