Better treatment of multiple affiliations

--- a/README
+++ b/README
@@ -32,5 +32,7 @@ version 1.16    Formatting changes for headers and footers.
 version 1.17    Formatting changes for margins and lists.  Bug fixes.
 
 version 1.18    Natbib is now the default for all versions.  A unified bib
-		file is used for all styles.
+		file is used for all styles.  Better treatment
+		of multiple affiliations.
+		
 
