--- a/sample-manuscript.tex
+++ b/sample-manuscript.tex
@@ -43,6 +43,7 @@
 \email{zhou@uva.edu}
 \author{Yafeng Wu}
 \email{ywu@uva.edu}
+\author{John A. Stankovic}
 \affiliation{%
   \institution{University of Virginia}
   \department{School of Engineering}
@@ -64,7 +65,6 @@
 \affiliation{%
   \institution{Google}
   \country{USA}}
-\author{John A. Stankovic}
 \affiliation{%
   \institution{University of Virginia}
   \department{School of Engineering}
@@ -85,6 +85,9 @@
   \postcode{22903}
   \country{USA}
 }
+\affiliation{%
+  \institution{Google}
+  \country{USA}}
 
 \begin{abstract}
 Multifrequency media access control has been well understood in
