--- a/samplebody-conf.tex
+++ b/samplebody-conf.tex
@@ -262,7 +262,7 @@ Here is a definition:
 
 The pre-defined theorem-like constructs are \textbf{theorem},
 \textbf{conjecture}, \textbf{proposition}, \textbf{lemma} and
-\textbf{corollary}.  The pre-defined definition-like constructs are
+\textbf{corollary}.  The pre-defined de\-fi\-ni\-ti\-on-like constructs are
 \textbf{example} and \textbf{definition}.  You can add your own
 constructs using the \textsl{amsthm} interface~\cite{Amsthm15}.  The
 styles used in the \verb|\theoremstyle| command are \textbf{acmplain}
@@ -337,7 +337,7 @@ the command \texttt{{\char'134}thebibliography}.
 \section{More Help for the Hardy}
 
 Of course, reading the source code is always useful.  The file
-\texttt{acmart.pdf} contains both the user guide and the commented
+\path{acmart.pdf} contains both the user guide and the commented
 code.
 
 \begin{acks}
