--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1179,7 +1179,7 @@
 \ProvidesFile{acmart.dtx}
 %</gobble>
 %<class>\ProvidesClass{acmart}
-[2016/07/12 v1.18 Typesetting articles for Association of
+[2016/08/03 v1.20 Typesetting articles for Association of
 Computing Machinery]
 %    \end{macrocode}
 %
@@ -1519,8 +1519,8 @@ Computing Machinery]
 \if@ACM@natbib
   \RequirePackage{natbib}
   \renewcommand{\bibsection}{%
-     \section*{\refname}
-     \phantomsection\addcontentsline{toc}{section}{\refname}
+     \section*{\refname}%
+     \phantomsection\addcontentsline{toc}{section}{\refname}%
   }
   \renewcommand{\bibfont}{\bibliofont}
   \renewcommand\setcitestyle[1]{
@@ -3411,12 +3411,12 @@ Computing Machinery]
   \@topnum\z@ % this prevents figures from falling at the top of page
               % 1
   \hsize=\textwidth
-  \def\@makefnmark{\hbox{\@textsuperscript{\@thefnmark}}}
+  \def\@makefnmark{\hbox{\@textsuperscript{\@thefnmark}}}%
   \@mktitle\if@ACM@sigchiamode\else\@mkauthors\fi\@mkteasers
   \@printtopmatter
   \if@ACM@sigchiamode\@mkauthors\fi
   \setcounter{footnote}{0}%
-  \def\@makefnmark{\hbox{\@textsuperscript{\normalfont\@thefnmark}}}
+  \def\@makefnmark{\hbox{\@textsuperscript{\normalfont\@thefnmark}}}%
   \@titlenotes
   \@subtitlenotes
   \@authornotes
@@ -4182,6 +4182,7 @@ Computing Machinery]
 % \begin{macro}{\@mkabstract}
 % \changes{v1.19}{2016/07/28}{Include 'Abstract' in PDF bookmarks
 % (Matthew Fluet)}
+% \changes{v1.20}{2016/08/03}{Deleted spurious space}
 %   Typesetting abstract
 %    \begin{macrocode}
 \def\@mkabstract{\bgroup
@@ -4191,8 +4192,8 @@ Computing Machinery]
     \else
       \section*{Abstract}%
     \fi
-   \phantomsection\addcontentsline{toc}{section}{Abstract}
-   \@abstract\par}%
+   \phantomsection\addcontentsline{toc}{section}{Abstract}%
+   \ignorespaces\@abstract\par}%
   \fi\egroup}
 %    \end{macrocode}
 %
