Bug fixes, documentation changes.  Closes #35

--- a/acmart.bib
+++ b/acmart.bib
@@ -63,3 +63,27 @@
   year =	 2007
 }
 
+@Manual{Sommerfeldt13:Subcaption,
+  title = 	 {The subcaption package},
+  author = 	 {Axel Sommerfeldt},
+  month = 	 {April},
+  year = 	 2013,
+  note = 	 {\url{http://www.ctan.org/pkg/subcaption}},
+}
+
+
+@Manual{Nomencl,
+  title = 	 {A package to create a nomenclature},
+  author = 	 {Boris Veytsman and Bern Schandl and Lee Netherton
+                  and CV Radhakrishnan},
+  month = 	 {September},
+  note = 	 {\url{http://www.ctan.org/pkg/nomencl}},
+  year = 	 2005}
+
+@Manual{Talbot16:Glossaries,
+  title = 	 {User Manual for glossaries.sty v4.25},
+  author = 	 {Nicola L. C. Talbot},
+  month = 	 {June},
+  year = 	 2016,
+  note = 	 {\url{http://www.ctan.org/pkg/subcaption}}}
+
