--- a/sample-manuscript.tex
+++ b/sample-manuscript.tex
@@ -1,6 +1,7 @@
 \listfiles
 \documentclass[manuscript, review, screen]{acmart}
-\setcitestyle{super,sort&compress}
+%\setcitestyle{super,sort&compress}
+\citestyle{acmauthoryear}
 \usepackage{booktabs} % For formal tables
 
 \usepackage[ruled]{algorithm2e} % For algorithms
