--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1132,10 +1132,18 @@
 % assignments.
 %
 %
+%\subsection{Other notable packages and typographic remarks}
+%\label{sec:ug_other}
 %
+% Several other packages are recommended for specialized tasks.
 %
-%\subsection{Typographich niceties}
-%\label{sec:ug_penalties}
+% The package \textsl{subcaption}~\cite{Sommerfeldt13:Subcaption} is
+% recommended for complex figures with several subplots or subfigures
+% that require separate subcaptioning.  The packages
+% \textsl{nomencl}~\cite{Nomencl} and
+% \textsl{glossaries}~\cite{Talbot16:Glossaries} can be used for the
+% automatic creation of the lists of symbols and concepts used.  
+%
 %
 % By default |acmart| prevents all widows and orphans (i.e. lonely
 % lines at the beginning and the end of the page) and hyphenation at
@@ -1179,7 +1187,7 @@
 \ProvidesFile{acmart.dtx}
 %</gobble>
 %<class>\ProvidesClass{acmart}
-[2016/08/03 v1.20 Typesetting articles for Association of
+[2016/08/06 v1.20 Typesetting articles for Association of
 Computing Machinery]
 %    \end{macrocode}
 %
@@ -1214,6 +1222,7 @@ Computing Machinery]
 % formats} 
 % \changes{v1.19}{2016/07/28}{Include 'Abstract', 'Acknowledgements',
 % and 'References' in PDF bookmarks (Matthew Fluet)}
+% \changes{v1.20}{2016/08/06}{Bug fixes for bst}
 %
 %
 % And the driver code:
